--- a/操作系统.md
+++ b/操作系统.md
@@ -63,8 +63,20 @@
   - 优点 : 可以把这些线程放在好几个 CPU 核心上，做到实际上的并行
   - 缺点 : 内核级线程切换的代价要比用户级线程大, 内核级线程的数量是有限的，扩展性比不上用户级线程
 
+## 四. 为什么寄存器比内存快？
 
-
-
-
+* 1.  原因一：距离不同
+	-  以3GHz的CPU为例，电流每秒钟可以振荡30亿次，每次耗时大约为0.33纳秒。光在1纳秒的时间内，可以前进30厘米。也就是说，在CPU的一个时钟周期内，光可以前进10厘米。因此，如果内存距离CPU超过5厘米，就不可能在一个时钟周期内完成数据的读取，这还没有考虑硬件的限制和电流实际上达不到光速。相比之下，寄存器在CPU内部，当然读起来会快一点
+* 2. 原因二：硬件设计不同
+	- 内存的设计相对简单，每个位就是一个电容和一个晶体管，而寄存器的设计则完全不同，多出好几个电子元件。并且通电以后，寄存器的晶体管一直有电，而内存的晶体管只有用到的才有电，没用到的就没电，这样有利于省电。这些设计上的因素，决定了寄存器比内存读取速度更快
+* 3. 原因三：工作方式不同
+	- 寄存器的工作方式很简单，只有两步：
+		- （1）找到相关的位
+		- （2）读取这些位
+	- 内存的工作方式就要复杂得多：
+		- （1）找到数据的指针。（指针可能存放在寄存器内，所以这一步就已经包括寄存器的全部工作了。）
+		- （2）将指针送往内存管理单元（MMU），由MMU将虚拟的内存地址翻译成实际的物理地址。
+		- （3）将物理地址送往内存控制器（memory controller），由内存控制器找出该地址在哪一根内存插槽（bank）上。
+		- （4）确定数据在哪一个内存块（chunk）上，从该块读取数据。
+		- （5）数据先送回内存控制器，再送回CPU，然后开始使用。
 
