--- a/网络.md
+++ b/网络.md
@@ -1,14 +1,43 @@
-## 网络相关
- 
+## 一. 电脑的 ip 是怎么来的, 0.0.0.0和255.255.255.255这两个地址是干嘛的？
 
+* 1、客户端请求 ip
+	- 客户端会发送一个广播，广播的目的 ip 是 255.255.255.255，目的端口是 67，客户端会把 0.0.0.0 作为自己的源 ip，源端口是 68。意在告诉别人：我急需一个 ip.
+
+* 2、DHCP响应
+	 - 当 DHCP 服务器收到这个报文之后，看源地址是 0.0.0.0，就知道这是一个请求 ip 的报文，DHCP 服务器就会给它提供一个 offer 报文内容包括 ip 地址，子码掩码，网关，ip 的有效期等信息。
+
+* 3、客户端挑选 ip 地址
+	 - 有可能不止一台 DHCP 服务器收到了 discover 请求报文，我们的主机一般是选择最先收到的 offer 报文来作为自己的 ip，然后会给对应的 DHCP 服务器次发送一个 request 报文，告诉它我看中了你的报文。
+
+* 4、DHCP确认
+	- DHCP 收到 request 报文之后，会给它回复一个 ACK 报文，并且把这个分配出去的 ip 进行登记。当我们的主机收到 ACK 报文之后，就可以开始冲浪在网上冲浪了。
+
+## 二. 为什么是三次握手, 两次可不可以？
+
+* 1、为了确认双方的接收与发送能力是否正常
+	- 第一次握手：客户端发送网络包，服务端收到了。这样服务端就能得出结论：客户端的发送能力、服务端的接收能力是正常的。  
+
+
+	- 第二次握手：服务端发包，客户端收到了。这样客户端就能得出结论：服务端的接收、发送能力，客户端的接收、发送能力是正常的。不过此时服务器并不能确认客户端的接收能力是否正常。    
+
+
+	- 第三次握手：客户端发包，服务端收到了。这样服务端就能得出结论：客户端的接收、发送能力正常，服务器自己的发送、接收能力也正常。
+
+* 2、DHCP响应
+	 - 当 DHCP 服务器收到这个报文之后，看源地址是 0.0.0.0，就知道这是一个请求 ip 的报文，DHCP 服务器就会给它提供一个 offer 报文内容包括 ip 地址，子码掩码，网关，ip 的有效期等信息。
+
+## 三. 四次挥手TIME_WAIT状态是干什么用的？
+
+* 为什么客户端发送 ACK 之后不直接关闭，而是要等一阵子才关闭。这其中的原因就是，要确保服务器是否已经收到了我们的 ACK 报文，如果没有收到的话，服务器会重新发 FIN 报文给客户端，客户端再次收到 FIN 报文之后，就知道之前的 ACK 报文丢失了，然后再次发送 ACK 报文。
+
+* 至于 TIME_WAIT 持续的时间至少是一个报文的来回时间。一般会设置一个计时，如果过了这个计时没有再次收到 FIN 报文，则代表对方成功就是 ACK 报文，此时处于 CLOSED 状态
+w
+
+
+-----
 * HTTPS的握手过程，https的验证证书怎么做的
-
 * 什么是中间人攻击？怎么预防
-
-* TCP的握手过程？为什么进行三次握手，四次挥手
-
 * charles抓包过程？不使用charles，4G网络如何抓包
-
 * 上传文件的http请求包含哪些信息
 * websocket建立时经过哪些过程
 * websocket断开时经过哪些过程
