--- a/算法/算法训练营(推荐).md
+++ b/算法/算法训练营(推荐).md
@@ -1,3 +1,7 @@
+##算法训练营讲义
+链接：https://pan.baidu.com/s/1PE6UZJZb2wbniDGntW8bpQ 
+提取码：oe4n
+
 ## Array
 
 [盛最多水的容器](https://leetcode-cn.com/problems/container-with-most-water/)
